<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Welcome!</string>
    <string name="ButtonText">I’m a button</string>
    <string name="title_activity_login">Sign in</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="edit_login">Login name</string>
    <string name="edit_password">Password</string>
    <string name="radio_button_text">RadioButton</string>
    <string name="checkbox_text">CheckBox</string>
    <string name="switch_text">What does it do?</string>
    <string name="button_login">LOGIN</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="dialog_message">Would you like finish the activity?</string>
    <string name="dialog_title">Dialog</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button_chat">START CHAT</string>
    <string name="weatherCurrentTemp">Current Temperatue</string>
    <string name="weatherMinTemp">Min Temperture</string>
    <string name="weatherMaxTemp">Max Temperature</string>
    <string name="button_weather">Weather Forecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="button_toolBar">ToolBar</string>
    <string name="action_settings">Setting</string>
    <string name="action_add">Add</string>
    <string name="action_message">Message</string>
    <string name="action_about">About</string>
    <string name="message">Version 1.0, By Yue Li</string>
    <string name="save">Save</string>
    <string name="action_weather">Weather</string>
</resources>
